--- a/css/style.css
+++ b/css/style.css
@@ -81,9 +81,10 @@ header {
 
 @media screen and (min-width: 1251px) {
 	header {
-		position: sticky;
+		position: fixed;
 		width: 100%;
 		top: 0;
+		left: 0;
 		z-index: 999;
 	}
 	header nav ul {
@@ -710,7 +711,7 @@ textarea {
 		display: block;
 	}
 
-	. header {
+	.header {
 		background: #fff;
 		height: 50px;
 		padding: 0;
@@ -718,9 +719,6 @@ textarea {
 
 	header nav.contenitore {
 		padding: 0 0px 10px 35px !important;
-	}
-	.logo {
-		padding-top: 12px;
 	}
 }
 @media screen and (max-width: 960px) {
@@ -862,6 +860,10 @@ textarea {
 }
 
 /** HOME **/
+.home-slider {
+	height: 800px;
+}
+
 .slide {
 	width: 100%;
 	height: 800px;
@@ -943,13 +945,7 @@ textarea {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
-	margin-top: 100px;
-}
-
-.mini-card-container {
-	display: flex;
-	gap: 20px;
-	margin-top: 100px;
+	margin-top: 0px;
 }
 
 .card {
@@ -1019,11 +1015,20 @@ textarea {
 	background-position: center center;
 }
 
+.mini-card-container {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 20px;
+	margin-top: 100px;
+	align-items: center;
+	justify-content: center;
+}
+
 .mini-card {
-	width: 300px;
+	width: 300px !important;
 	background-color: #fff;
 	text-align: center;
-	display: flex;
+	display: flex !important;
 	flex-direction: column;
 	border-radius: 22px;
 }
@@ -1036,7 +1041,7 @@ textarea {
 }
 
 .mini-card-img img {
-	height: 300px;
+	height: 260px;
 }
 
 .mini-card-text {
@@ -1179,24 +1184,9 @@ footer {
 
 .slick-list {
 	width: 100%;
-	transform: translate3d(0, -78px, 0) !important;
 }
 
 .slick-slide img {
 	width: auto;
 	display: inline;
-}
-
-.slick-dotted.slick-slider {
-	margin-bottom: 0;
-}
-
-.slick-dots {
-	bottom: 10px;
-}
-
-@media screen and (max-width: 1251px) {
-	.slick-list {
-		transform: translate3d(0, 0, 0) !important;
-	}
 }
