--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,18 @@ header nav {
 	padding: 0px !important;
 }
 
+.subm.white:after {
+	content: "";
+	background: url(../img/down-arrow-white.png) right 50% no-repeat;
+	padding-right: 20px;
+}
+
+.subm.black::after {
+	content: "";
+	background: url(../img/down-arrow-black.png) right 50% no-repeat;
+	padding-right: 20px;
+}
+
 @media screen and (min-width: 1251px) {
 	header nav ul {
 		list-style: none;
@@ -111,6 +123,9 @@ header nav {
 		text-transform: uppercase;
 	}
 	header nav ul li a:hover {
+		color: #c00a05;
+	}
+	header nav ul li ul li a:hover {
 		color: #c00a05;
 	}
 	#nav-mobile {
@@ -150,6 +165,7 @@ header nav {
 		background: #f1f1f1;
 		z-index: 99999;
 		min-width: 180px;
+		filter: drop-shadow(0px 10px 3px black);
 	}
 	header nav li ul a,
 	header nav li ul b {
@@ -158,7 +174,7 @@ header nav {
 		padding: 10px 5px;
 		border-top: 1px solid #ccc;
 		min-width: 140px;
-		color: #666666;
+		color: #000;
 		border-bottom: 0px;
 		text-transform: uppercase;
 	}
@@ -185,10 +201,6 @@ header nav {
 	}
 	.big-menu {
 		margin-left: -60px !important;
-	}
-	.subm {
-		background: url(../img/arrow-down.png) right 38% no-repeat;
-		padding-right: 11px;
 	}
 
 	article {
@@ -668,9 +680,9 @@ textarea {
 	}
 	nav #nav-mobile li a {
 		display: block;
-		background: #b7b7b7;
+		background: #fff;
 		text-transform: uppercase;
-		color: #2a2a2a;
+		color: #000;
 		padding: 15px 25px;
 		width: 100%;
 		margin: 0px;
@@ -684,7 +696,7 @@ textarea {
 		border: 0px;
 	}
 	nav #nav-mobile li a:hover {
-		color: #fff;
+		color: #c00a05;
 		background: #224a05;
 		border-bottom: 0px;
 	}
@@ -693,8 +705,8 @@ textarea {
 		padding: 0px;
 	}
 	nav #nav-mobile li ul li a {
-		background: #8e8b8b;
-		color: #fff;
+		background: #fff;
+		color: #000;
 		border-top: 1px solid #fff;
 		font-weight: normal;
 	}
@@ -1006,6 +1018,12 @@ section {
 	padding: 15px 30px 15px 30px;
 	border-radius: 25px;
 	margin-bottom: 15px;
+}
+
+.card-pellet {
+	background: url("..");
+	background-repeat: no-repeat;
+	background-position: center center;
 }
 
 .card-lettiere {
@@ -1522,6 +1540,11 @@ footer {
 	.fs-48px {
 		font-size: 2.2rem;
 	}
+}
+
+.no-clickable {
+	pointer-events: none;
+	cursor: default;
 }
 
 /** RECAPTCHA GOOGLE **/
