--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ header nav {
 		background: #f1f1f1;
 		z-index: 99999;
 		min-width: 180px;
-		filter: drop-shadow(0px 10px 3px black);
+		filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 	}
 	header nav li ul a,
 	header nav li ul b {
@@ -1035,7 +1035,7 @@ section {
 .card-cippato {
 	background: url("../img/produzione-cippato-geminati.jpg");
 	background-repeat: no-repeat;
-	background-position: center center;
+	background-position: top center;
 }
 
 .mini-card-container {
@@ -1155,6 +1155,20 @@ section {
 	background-size: cover;
 }
 
+.img-lettiere {
+	background: url("../img/cippato-legno.jpg");
+	background-repeat: no-repeat;
+	background-position: top center;
+	background-size: cover;
+}
+
+.img-cippato {
+	background: url("../img/produzione-cippato-geminati.jpg");
+	background-repeat: no-repeat;
+	background-position: top center;
+	background-size: cover;
+}
+
 @media screen and (max-width: 960px) {
 	.sect-produzione__img {
 		border-radius: 0 0 44px 44px;
@@ -1251,6 +1265,17 @@ section {
 
 .slide-azienda h1 {
 	font-size: 6.25rem;
+}
+
+.box-best-performer {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 3rem;
+}
+
+.box-best-performer > img {
+	border-radius: 44px;
 }
 
 @media screen and (max-width: 1250px) {
@@ -1367,14 +1392,14 @@ section {
 .card-cert-produttori {
 	background: url("../img/certificato-produttori.jpg");
 	background-repeat: no-repeat;
-	background-position: center center;
+	background-position: top center;
 	background-size: cover;
 }
 
 .card-cert-distributori {
 	background: url("../img/Certificato-distributori.jpg");
 	background-repeat: no-repeat;
-	background-position: center center;
+	background-position: top center;
 	background-size: cover;
 }
 
@@ -1455,6 +1480,10 @@ footer {
 }
 
 /*UTILITY CLASSES*/
+.mb-5 {
+	margin-bottom: 5rem;
+}
+
 .p-1 {
 	padding: 1rem;
 }
